--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,117 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 台湾-622.7KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇭🇰 香港-578.3KB/s(Youtube:不良林), server: scloud57.jafiyun.life, port: 22057, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud57.jafiyun.life, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-214.7KB/s(Youtube:不良林), server: 213.183.59.214, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
-  - {name: 🇨🇳 中国-4.68MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-348.7KB/s(Youtube:不良林), server: scloud58.jafiyun.life, port: 22058, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud58.jafiyun.life, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-190.6KB/s(Youtube:不良林), server: 213.183.59.214, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 🇳🇱 荷兰-157.6KB/s(Youtube:不良林), server: 213.183.59.214, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
-  - {name: 🇸🇬 新加坡-888.0KB/s(Youtube:不良林), server: w13.udpgw.com, port: 443, type: trojan, password: 16877c70-e7b8-11ec-99f2-1239d0255272, sni: w13.udpgw.com, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.31MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇷🇺 俄罗斯联邦-323.5KB/s(Youtube:不良林), server: 213.183.53.208, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
+  - {name: 🇨🇳 中国-9.39MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: ca911d30af65ef1b, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林), server: 213.183.53.177, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇨🇳 中国-9.47MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.88MB/s(Youtube:不良林), server: 120.233.186.71, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林) 2, server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇨🇳 台湾-5.63MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-9.65MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-456.1KB/s(Youtube:不良林), server: 213.183.53.177, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
+  - {name: 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-622.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-578.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-214.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-348.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-190.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-157.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-888.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-323.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林) 2
+      - 🇨🇳 台湾-5.63MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-456.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 台湾-622.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-578.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-214.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-348.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-190.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-157.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-888.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-323.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林) 2
+      - 🇨🇳 台湾-5.63MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-456.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-622.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-578.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-214.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-348.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-190.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-157.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-888.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-323.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林) 2
+      - 🇨🇳 台湾-5.63MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-456.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-622.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-578.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-348.7KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.63MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.65MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 台湾-622.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-578.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-214.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-348.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-190.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-157.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-888.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-323.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林) 2
+      - 🇨🇳 台湾-5.63MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-456.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-622.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-578.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-214.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-348.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-190.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-157.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-888.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-323.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林) 2
+      - 🇨🇳 台湾-5.63MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-456.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-622.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-578.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-214.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-348.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-190.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-157.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-888.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-323.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林) 2
+      - 🇨🇳 台湾-5.63MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-456.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -131,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-622.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-578.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-214.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-348.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-190.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-157.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-888.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-323.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林) 2
+      - 🇨🇳 台湾-5.63MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-456.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
