--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-9.39MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: ca911d30af65ef1b, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林), server: 213.183.53.177, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇨🇳 中国-9.47MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.88MB/s(Youtube:不良林), server: 120.233.186.71, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林) 2, server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇨🇳 台湾-5.63MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-9.65MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-456.1KB/s(Youtube:不良林), server: 213.183.53.177, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
-  - {name: 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇬🇧 英国-1.90MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-12.46MB/s(Youtube:不良林), server: 120.233.186.71, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.64MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-2.17MB/s(Youtube:不良林), server: vde1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vde1.0bad.com}}
+  - {name: 🇷🇺 俄罗斯联邦-180.3KB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇸🇬 新加坡-476.8KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.88MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.65MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇩🇪 德国-1.71MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林) 2
-      - 🇨🇳 台湾-5.63MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-9.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-456.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-180.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-476.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林) 2
-      - 🇨🇳 台湾-5.63MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-9.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-456.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-180.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-476.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林) 2
-      - 🇨🇳 台湾-5.63MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-9.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-456.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-180.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-476.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-5.63MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-9.65MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林) 2
-      - 🇨🇳 台湾-5.63MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-9.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-456.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-180.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-476.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林) 2
-      - 🇨🇳 台湾-5.63MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-9.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-456.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-180.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-476.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林) 2
-      - 🇨🇳 台湾-5.63MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-9.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-456.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-180.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-476.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林) 2
-      - 🇨🇳 台湾-5.63MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-9.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-456.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-180.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-476.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
