--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-2.17MB/s(Youtube:不良林), server: vde1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vde1.0bad.com}}
-  - {name: 🇺🇸 美国-2.88MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.64MB/s(Youtube:不良林), server: 120.233.186.71, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.15MB/s(Youtube:不良林), server: 120.233.186.204, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.48MB/s(Youtube:不良林), server: hkbgp1.jiantian.xyz, port: 14326, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: hkbgp1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-443.1KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-6.08MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.20MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.52MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-340.6KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.58MB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.42MB/s(Youtube:不良林), server: 120.233.186.204, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-196.7KB/s(Youtube:不良林), server: 213.183.53.177, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇬🇧 英国-868.0KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-643.4KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 57229afb-d4e4-426e-bfdc-18fc1f3267fd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇨🇳 中国-3.91MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.88MB/s(Youtube:不良林), server: 116.129.253.134, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.96MB/s(Youtube:不良林), server: 116.129.253.134, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-510.9KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-196.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-868.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-643.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-510.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-196.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-868.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-643.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-510.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-196.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-868.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-643.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-510.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-196.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-868.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-643.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-510.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-196.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-868.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-643.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-510.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-196.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-868.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-643.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-510.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-196.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-868.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-643.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-510.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
