--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-526.5KB/s(Youtube:不良林), server: 161.35.69.20, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇷🇺 俄罗斯联邦-384.9KB/s(Youtube:不良林), server: 213.183.53.208, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
   - {name: 🇺🇸 美国-2.27MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-389.4KB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.81MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.76MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-11.43MB/s(Youtube:不良林), server: 120.233.186.71, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.37MB/s(Youtube:不良林), server: 120.233.186.71, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.09MB/s(Youtube:不良林), server: 120.233.186.71, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.60MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-384.9KB/s(Youtube:不良林), server: 213.183.53.208, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
+  - {name: 🇨🇳 台湾-7.79MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-564.8KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-5.36MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.12MB/s(Youtube:不良林), server: 116.129.253.134, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.66MB/s(Youtube:不良林), server: 116.129.253.134, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.58MB/s(Youtube:不良林), server: 116.129.253.134, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-497.4KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-5.85MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-526.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-384.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-389.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-384.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.79MB/s(Youtube:不良林)
+      - 🇫🇷 法国-564.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.58MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-497.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-526.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-384.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-389.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-384.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.79MB/s(Youtube:不良林)
+      - 🇫🇷 法国-564.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.58MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-497.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-526.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-384.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-389.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-384.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.79MB/s(Youtube:不良林)
+      - 🇫🇷 法国-564.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.58MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-497.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-7.79MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-526.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-384.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-389.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-384.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.79MB/s(Youtube:不良林)
+      - 🇫🇷 法国-564.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.58MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-497.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-526.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-384.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-389.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-384.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.79MB/s(Youtube:不良林)
+      - 🇫🇷 法国-564.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.58MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-497.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-526.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-384.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-389.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-384.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.79MB/s(Youtube:不良林)
+      - 🇫🇷 法国-564.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.58MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-497.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-526.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-384.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-389.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-384.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.79MB/s(Youtube:不良林)
+      - 🇫🇷 法国-564.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.58MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-497.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
